FINAL PROJECT DAILY MOTIVATION

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
   <title>Daily Motivation</title>
   <link rel="stylesheet" media="screen" href="vendor/bootstrap.min.css">
-	<link rel="stylesheet" media="screen" href="style.css">
+	<link rel="stylesheet" media="screen" href="finalstyle.css">
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
+  <nav id = "header" class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header text-danger">
         <h1>Daily Motivation Quotes</h1>
@@ -22,7 +22,7 @@
         <div class="card-text">
           <form action="" id="inspiration-form">
             <div class="form-group">
-              <label>Motivation</label>
+              <label>Copy and Paste the qoute you want into the box then click "Click to Save Qoute".!</label>
               <textarea id="Quote" type="text" class="form-control"></textarea>
             </div>
             <button id ='grabQuote' type="submit" class="btn btn-primary">Click for Happiness</button>
